--- a/views/admin/products/addProduct.ejs
+++ b/views/admin/products/addProduct.ejs
@@ -118,8 +118,8 @@
                   </div>
                   <input name="image1" type="file" accept="image/*" id="imageInput1" class="imageInput"
                     onchange="openImageCropper(1)">
-                  <button type="button" class="btn btn-sm btn-secondary mt-2"
-                    onclick="openModal('imagePreview1')">Crop</button>
+                  <!-- <button type="button" class="btn btn-sm btn-secondary mt-2"
+                    onclick="openModal('imagePreview1')">Crop</button> -->
                 </label>
                 <span id="imageError1" class="text-danger"></span>
               </div>
@@ -133,8 +133,8 @@
                   </div>
                   <input name="image2" type="file" accept="image/*" id="imageInput2" class="imageInput"
                     onchange="openImageCropper(2)">
-                  <button type="button" class="btn btn-sm btn-secondary mt-2"
-                    onclick="openModal('imagePreview2')">Crop</button>
+                  <!-- <button type="button" class="btn btn-sm btn-secondary mt-2"
+                    onclick="openModal('imagePreview2')">Crop</button> -->
                 </label>
                 <span id="imageError2" class="text-danger"></span>
               </div>
@@ -148,8 +148,8 @@
                   </div>
                   <input name="image3" type="file" accept="image/*" id="imageInput3" class="imageInput"
                     onchange="openImageCropper(3)">
-                  <button type="button" class="btn btn-sm btn-secondary mt-2"
-                    onclick="openModal('imagePreview3')">Crop</button>
+                  <!-- <button type="button" class="btn btn-sm btn-secondary mt-2"
+                    onclick="openModal('imagePreview3')">Crop</button> -->
                 </label>
                 <span id="imageError3" class="text-danger"></span>
               </div>
@@ -163,8 +163,8 @@
                   </div>
                   <input name="image4" type="file" accept="image/*" id="imageInput4" class="imageInput"
                     onchange="openImageCropper(4)">
-                  <button type="button" class="btn btn-sm btn-secondary mt-2"
-                    onclick="openModal('imagePreview4')">Crop</button>
+                  <!-- <button type="button" class="btn btn-sm btn-secondary mt-2"
+                    onclick="openModal('imagePreview4')">Crop</button> -->
                 </label>
                 <span id="imageError4" class="text-danger"></span>
               </div>
@@ -176,7 +176,7 @@
     </div>
   </div>
   <!-- Modal for Cropping -->
-  <div class="modal fade" id="cropModal" tabindex="-1" role="dialog" aria-labelledby="cropModalLabel" aria-hidden="true"
+  <!-- <div class="modal fade" id="cropModal" tabindex="-1" role="dialog" aria-labelledby="cropModalLabel" aria-hidden="true"
     style="">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -195,7 +195,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <script defer>var cropper;
 
     // Function to open the Cropper modal
