--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -30,6 +30,9 @@
     <link rel="stylesheet" href="/assets/css/plugins/jquery.countdown.css">
     <link rel="shortcut icon" href="https://demo.bootstrapious.com/sell/2-0-1/img/favicon.png">
 
+     <!-- owl carousel-->
+     <link rel="stylesheet" href="https://demo.bootstrapious.com/sell/2-0-1/vendor/owl.carousel/assets/owl.carousel.css">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -67,7 +70,15 @@
     <script src="/assets/js/demos/demo-8.js"></script>
     <!-- Bootstrap JavaScript Bundle (Popper.js included)-->
     <script src="https://demo.bootstrapious.com/sell/2-0-1/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    
+    <!-- Bootstrap Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- Owl Carousel-->
+    <script src="https://demo.bootstrapious.com/sell/2-0-1/vendor/owl.carousel/owl.carousel.js"></script>
+    <script
+        src="https://demo.bootstrapious.com/sell/2-0-1/vendor/owl.carousel2.thumbs/owl.carousel2.thumbs.min.js">
+    </script>
+
 </body>
 
 </html>
